--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 	},
 	"dependencies": {
 		"@types/uuid": "^9.0.8",
+		"animate.css": "^4.1.1",
 		"electron-log": "5.1.7",
 		"electron-updater": "6.1.8",
 		"jdenticon": "^3.3.0",
