--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
 	"dependencies": {
 		"@types/uuid": "^9.0.8",
 		"animate.css": "^4.1.1",
+		"electron-cfg": "^1.2.7",
 		"electron-log": "5.1.7",
 		"electron-updater": "6.1.8",
 		"jdenticon": "^3.3.0",
+		"jsonfile": "^6.1.0",
 		"lodash-es": "^4.17.21",
 		"mysql2": "^3.9.2",
 		"pinia": "^2.1.7",
