--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"@iconify-json/ph": "^1.1.14",
 		"@iconify-json/tabler": "^1.1.119",
 		"@types/lodash-es": "^4.17.6",
+		"@unocss/preset-rem-to-px": "^0.62.2",
 		"@unocss/reset": "^0.61.9",
 		"@vicons/fluent": "^0.12.0",
 		"@vitejs/plugin-vue": "5.0.4",
