--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"electron-cfg": "^1.2.7",
 		"electron-log": "5.1.7",
 		"electron-updater": "6.1.8",
+		"fs-extra": "^11.2.0",
 		"jdenticon": "^3.3.0",
 		"jsonfile": "^6.1.0",
 		"lodash-es": "^4.17.21",
