--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
 		"electron-log": "5.1.7",
 		"electron-updater": "6.1.8",
 		"fs-extra": "^11.2.0",
+		"handlebars": "^4.7.8",
 		"jdenticon": "^3.3.0",
 		"jsonfile": "^6.1.0",
 		"lodash-es": "^4.17.21",
+		"monaco-editor": "^0.50.0",
+		"monaco-sql-languages": "^0.12.2",
 		"mysql2": "^3.9.2",
 		"pinia": "^2.1.7",
 		"pinia-plugin-persistedstate": "^3.2.1",
