✨ Feature: 数据库语句生成

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"sqlite3": "5.1.6",
 		"typeorm": "0.3.20",
 		"uuid": "^9.0.1",
+		"vfonts": "^0.0.3",
 		"vue": "^3.4.19"
 	},
 	"devDependencies": {
