--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 	},
 	"devDependencies": {
 		"@electron/rebuild": "3.6.0",
+		"@iconify-json/carbon": "^1.1.37",
 		"@iconify-json/fluent": "^1.1.61",
 		"@iconify-json/material-symbols": "^1.1.87",
 		"@iconify-json/material-symbols-light": "^1.1.27",
