--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"@electron/rebuild": "3.6.0",
 		"@iconify-json/carbon": "^1.1.37",
 		"@iconify-json/fluent": "^1.1.61",
+		"@iconify-json/lets-icons": "^1.1.3",
 		"@iconify-json/material-symbols": "^1.1.87",
 		"@iconify-json/material-symbols-light": "^1.1.27",
 		"@iconify-json/mingcute": "^1.1.19",
