--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
 	},
 	"packageManager": "npm@8.19.2",
 	"dependencies": {
+		"@ag-grid-community/locale": "^32.1.0",
 		"@types/uuid": "^9.0.8",
+		"ag-grid-community": "^32.1.0",
+		"ag-grid-vue3": "^32.1.0",
 		"animate.css": "^4.1.1",
 		"electron-cfg": "^1.2.7",
 		"electron-log": "5.1.7",
